			- "Import" allows to enter terms from a CSV formatted text: the user specifies what
			  character should be interpreted as the field separator
			- "Export" displays the current table in CSV format (for the user to copy-n-paste somewhere);
			  the user indicates the desired separator character.
		- the following separators are possible: comma (,), sem-colon (;), tab, and pipe (|)
		
2009-04-07
	Implemented issue #84: "allow user-given namespace (URI) in voc2rdf"
	VocabPanel.OntologyUriPanel handles the information about the resulting URI for the ontology.
	The user can now specify the complete URI and later, if desired, revert to the automated 
	handling.

2009-04-07
	Fixed issue #120: "title doesn't get carried forward"
	Problem was that Omv.name was assigned BOTH the class name and the fulltitle.
	Only the fullTitle is now assigned.
	
2009-04-06
	Fixed issue #119: "Allow empty fields in non-required columns"
	This also required to generate "" column values for the missing fields so the original
	voc2rdf scheme to make the conversion (which is based on the com.infomata.data library)
	works with no ArrayOutOfBoundsException's. 
	
2009-04-01
	- setReadOnly(!enabled) instead of setEnabled(enabled) for text fields; this allows the
	  user to select the text even if it's not editable.

2009-03-31    voc2rdf 1.2.0.beta2
	- oops, I introduced a bug with my latest changes: individuales were not put in the
	  namespace appropriately (I forgot to use the namespace (_ns) in Converter.createIndividual()
	  after the change in getGoodName(), which now does not include the namespace itself)
	  -> fixed.
	  
	
2009-03-28,29:   voc2rdf 1.2.0.beta1

	- Many updates to Voc2RDF
		- More metadata captured (title, creator, description, authority)
		- Button convert to RDF now opens a dialog (No tab for conversion)
		- class & terms now in a tab (in preparation for multiple classes)
				
		- New editable, spreadsheet-like table for the terms: